@@ -83,8 +83,6 @@ _mkexpect(List *script, char *str)
  */
 void cli_init(void)
 {
-    List *scripts;
-
     assert(client_prot == NULL);
 
     /* create cli_clients list */
@@ -95,10 +93,6 @@ void cli_init(void)
      * Each one has exactly one EXPECT.  
      */
     client_prot = (Protocol *) Malloc(sizeof(Protocol));
-
-    scripts = (List *) Malloc(NUM_SCRIPTS * sizeof(List));
-    client_prot->scripts = scripts;
-    client_prot->num_scripts = NUM_SCRIPTS;
     client_prot->mode = SM_REGEX;
 
     /*
@@ -106,17 +100,17 @@ void cli_init(void)
      * replies generated by each command.  The following are just the 
      * means for detecting which function the client in instigating.  
      */
-    scripts[PM_ERROR] = NULL;
-    _mkexpect(&scripts[PM_LOG_IN],	    "powerman");
-    _mkexpect(&scripts[PM_CHECK_LOGIN],	    "check login");
-    _mkexpect(&scripts[PM_LOG_OUT],	    "quit");
-    _mkexpect(&scripts[PM_UPDATE_PLUGS],    "update plugs");
-    _mkexpect(&scripts[PM_UPDATE_NODES],    "update nodes");
-    _mkexpect(&scripts[PM_POWER_ON],	    "on ([^[:space:]]+)");
-    _mkexpect(&scripts[PM_POWER_OFF],	    "off ([^[:space:]]+)");
-    _mkexpect(&scripts[PM_POWER_CYCLE],	    "cycle ([^[:space:]]+)");
-    _mkexpect(&scripts[PM_RESET],	    "reset ([^[:space:]]+)");
-    _mkexpect(&scripts[PM_NAMES],	    "names ([^[:space:]]+)");
+    client_prot->scripts[PM_ERROR] = NULL;
+    _mkexpect(&client_prot->scripts[PM_LOG_IN],	      "powerman");
+    _mkexpect(&client_prot->scripts[PM_CHECK_LOGIN],  "check login");
+    _mkexpect(&client_prot->scripts[PM_LOG_OUT],      "quit");
+    _mkexpect(&client_prot->scripts[PM_UPDATE_PLUGS], "update plugs");
+    _mkexpect(&client_prot->scripts[PM_UPDATE_NODES], "update nodes");
+    _mkexpect(&client_prot->scripts[PM_POWER_ON],     "on ([^[:space:]]+)");
+    _mkexpect(&client_prot->scripts[PM_POWER_OFF],    "off ([^[:space:]]+)");
+    _mkexpect(&client_prot->scripts[PM_POWER_CYCLE],  "cycle ([^[:space:]]+)");
+    _mkexpect(&client_prot->scripts[PM_RESET],	      "reset ([^[:space:]]+)");
+    _mkexpect(&client_prot->scripts[PM_NAMES],	      "names ([^[:space:]]+)");
 }
 
 /*
@@ -133,7 +127,7 @@ cli_fini(void)
     list_destroy(cli_clients);
 
     /* destroy client protocol */
-    for (i = 0; i < client_prot->num_scripts; i++)
+    for (i = 0; i < NUM_SCRIPTS; i++)
 	list_destroy(client_prot->scripts[i]);
     Free(client_prot);
     client_prot = NULL;
